logs/muxpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Muxpy-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/muxpy'...
Compiling './lib/python3.5/site-packages/muxpy/backend.py'...
***   File "./lib/python3.5/site-packages/muxpy/backend.py", line 47
    print tmux.list_panes()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/muxpy/commands.py'...
***   File "./lib/python3.5/site-packages/muxpy/commands.py", line 95
    print 'made profile, %d sessions with total %d windows' % (len(data), sum(len(x['windows']) for x in data))
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/muxpy/parser.py'...
***   File "./lib/python3.5/site-packages/muxpy/parser.py", line 85
    print tmux.list_sessions()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/muxpy/process.py'...
***   File "./lib/python3.5/site-packages/muxpy/process.py", line 44
    print tmux('list-sessions'),
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/muxpy/profile.py'...
***   File "./lib/python3.5/site-packages/muxpy/profile.py", line 12
    print get_profile_path('testprof', 'json')
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/muxpy/ps.py'...
***   File "./lib/python3.5/site-packages/muxpy/ps.py", line 65
    print p[pid]
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
